# ariadne-gql-template

./: README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 2023_06_19_2234-beb5da11fac5_add_users.py
app/api/: mutation.py  query.py  scalars.py
app/api/schema/: enums.graphql  inputs.graphql  mutations.graphql  queries.graphql  results.graphql  types.graphql
app/core/: config.py  db.py
app/modules/passports/: models.py  queries.py
app/modules/users/: models.py  mutations.py  queries.py
tests/: conftest.py
tests/users/: test_create_user.py
